fix scroll, email link, and better readability

--- a/aboutme.html.css
+++ b/aboutme.html.css
@@ -1,11 +1,6 @@
-body{
-    overflow-y: auto;
-}
-
 .about-me {
     font-size: 1.4em;
-    text-align: start;
-    text-justify: newspaper;
+    text-align: justify;
     color: white;
     font-weight: 400;
     transition: font-size 0.6s;
@@ -22,11 +17,6 @@ body{
     transition-timing-function: cubic;
 }
 
-.name-header{
-    text-align: start;
-    font-size: 4em;
-}
-
 p > em{
     transition: color 300ms;
 }
@@ -36,5 +26,11 @@ p > em:hover{
 }
 
 section{
-    margin: 80px 40px;
+    margin: 80px 20vw;
+}
+
+@media screen and (max-width: 800px) {
+    section{
+        margin: 80px 40px;
+    }
 }
