--- a/projects/budjet/privacystatement.html.css
+++ b/projects/budjet/privacystatement.html.css
@@ -1,11 +1,6 @@
-body{
-    overflow-y: auto;
-}
-
 .privacy-statement {
     font-size: 1.4em;
-    text-align: start;
-    text-justify: newspaper;
+    text-align: justify;
     color: white;
     font-weight: 400;
     transition: font-size 0.6s;
@@ -23,7 +18,11 @@ body{
 }
 
 section{
-    margin: 80px 40px;
-    box-sizing: border-box;
-    overflow-y: auto;
+    margin: 80px 20vw;
+}
+
+@media screen and (max-width: 800px) {
+    section{
+        margin: 80px 40px;
+    }
 }
