--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 }
 
 html {
-    overflow: hidden;
+    overflow: auto;
 }
 
 body {
@@ -33,7 +33,7 @@ body {
     animation-iteration-count: infinite;
     margin: 0px 0px;
     transition: background-image 0.5s;
-    overflow: hidden;
+    overflow: auto;
     min-height: 100vh;
     max-width: 100vw;
 }
